[gd_scene load_steps=2 format=3 uid="uid://br7nn3rrtebvx"]

[ext_resource type="Script" path="res://Entites/Moveables/Universals/Damage_and_Health_Nodes/scripts/hurt_box.gd" id="1_w71hn"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource("1_w71hn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
